Remove test code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.8)
 project(zephyrLib)
 
+set(LINKTIME_OPTIMIZATION_FLAG "-flto")
+
 set(CMAKE_CXX_STANDARD 17)
-set(GCC_OPTION_FLAGS "-std=c++1z -flto -fopenacc -fopenmp -fcilkplus -fgnu-tm -fvisibility-inlines-hidden -fdiagnostics-generate-patch")
+set(GCC_OPTION_FLAGS "-std=c++1z -fopenacc -fopenmp -fcilkplus -fgnu-tm -fvisibility-inlines-hidden -fdiagnostics-generate-patch ${LINKTIME_OPTIMIZATION_FLAG}")
 set(GCC_WARNING_FLAGS "-Wall -Weffc++ -Wextra -Wnoexcept -Wformat -Wold-style-cast -Woverloaded-virtual -Wnull-dereference -Wimplicit-fallthrough -Wmissing-include-dirs -Wunused-parameter -Wuninitialized -Wsuggest-attribute=pure -Wsuggest-attribute=const -Wsuggest-attribute=noreturn -Wsuggest-attribute=format -Wmissing-format-attribute  -Wsuggest-final-types -Wsuggest-final-methods -Wsuggest-override -Walloc-zero -Wduplicated-branches -Wduplicated-cond -Wtrampolines -Wfloat-equal -Wshadow=compatible-local -Wpointer-arith -Wundef -Wcast-qual -Wcast-align -Wconversion -Wzero-as-null-pointer-constant -Wuseless-cast -Wmissing-declarations -Wpacked -Wredundant-decls -Wdisabled-optimization")
-set(GCC_RELEASE_SPECIFIC_FLAGS "-g -O3")
+set(GCC_RELEASE_SPECIFIC_FLAGS "-ggdb3 -Og")
 set(GCC_DEBUG_SPECIFIC_FLAGS "-ggdb3 -Og")
 
 set(FUTURE_GCC_FLAGS "-fdiagnostics-show-template-tree -Wcatch-value=3 -Wextra-semi")
@@ -13,9 +15,8 @@ set(GCC_COMPILATION_FLAGS "${GCC_OPTION_FLAGS} ${GCC_WARNING_FLAGS} ${GCC_DEBUG_
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COMPILATION_FLAGS}")
 
-set(LIBRARY_SOURCE_FILES src/library.cpp)
-add_library(zephyrLib SHARED ${LIBRARY_SOURCE_FILES})
+SET(BOOST_ROOT "/usr/local/boost/")
+find_package( Boost REQUIRED system )
 
-set(EXECUTABLE_SOURCE_FILES src/main.cpp)
-add_executable(main src/main.cpp)
-target_link_libraries(main zephyrLib)
+add_subdirectory(src/async)
+add_subdirectory(src/comms)
