--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ compiler:
     - clang
 
 before_script:
+    - sudo apt-get update -qq
+    - sudo apt-get install libboost-thread-dev libboost-system-dev
     - mkdir build
     - cd build
     - cmake ..
