--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
 language: cpp
 
+matrix:
+  include:
+# works on Precise and Trusty
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
 compiler:
     - gcc
-    - clang
 
 before_script:
+    - eval "${MATRIX_EVAL}"
     - sudo apt-get update -qq
     - sudo apt-get install libboost-thread-dev libboost-system-dev
     - mkdir build
