--- a/src/async/CMakeLists.txt
+++ b/src/async/CMakeLists.txt
@@ -7,3 +7,5 @@ add_library(async SHARED ${ASYNC_LIBRARY_SOURCE_FILES})
 target_link_libraries(async ${Boost_SYSTEM_LIBRARY})
 target_include_directories(async SYSTEM PUBLIC ${Boost_INCLUDE_DIR})
 target_include_directories(async PUBLIC ${CMAKE_SOURCE_DIR}/src/common)
+
+add_subdirectory(framework/test)
