--- a/externalProjects/catch/CMakeLists.txt
+++ b/externalProjects/catch/CMakeLists.txt
@@ -1,4 +1,3 @@
-cmake_minimum_required(VERSION 2.8.8)
 project(catch_builder CXX)
 include(ExternalProject)
 find_package(Git REQUIRED)
@@ -18,3 +17,6 @@ ExternalProject_Add(
 # Expose required variable (CATCH_INCLUDE_DIR) to parent scope
 ExternalProject_Get_Property(catch source_dir)
 set(CATCH_INCLUDE_DIR ${source_dir}/single_include CACHE INTERNAL "Path to include folder for Catch")
+
+add_library(catchMain STATIC catchMain.cpp)
+target_include_directories(catchMain PUBLIC ${CATCH_INCLUDE_DIR})
