--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,16 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
-compiler:
-    - gcc
+      # works on Trusty
+      - os: linux
+        addons:
+          apt:
+            sources:
+              - llvm-toolchain-trusty-5.0
+            packages:
+              - clang-5.0
+        env:
+          - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
 before_script:
     - eval "${MATRIX_EVAL}"
