--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-tes
+            - ubuntu-toolchain-r-test
             - llvm-toolchain-trusty-5.0
             - sourceline: 'ppa:nschloe/cmake-nightly'
           packages:
@@ -20,7 +20,6 @@ compiler:
   - gcc
 
 before_script:
-    - eval "${MATRIX_EVAL}"
     - sudo apt-get update -qq
     - sudo apt-get install libboost-thread-dev libboost-system-dev
     - mkdir build
