--- a/build-config/basic/CMakeLists.txt
+++ b/build-config/basic/CMakeLists.txt
@@ -19,6 +19,9 @@ enable_testing(true)  # Enables unit-testing.
 SET(BOOST_ROOT "/usr/local/boost/")
 find_package( Boost REQUIRED system )
 
+message("Found boost include directory: ${Boost_INCLUDE_DIRS}")
+message("Found boost system library: ${Boost_SYSTEM_LIBRARY}")
+
 add_subdirectory(src/async)
 add_subdirectory(src/comms)
 add_subdirectory(src/core)
