--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,14 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
             - llvm-toolchain-trusty-5.0
-            - sourceline: 'ppa:nschloe/cmake-nightly'
           packages:
             - g++-7
             - clang-5.0
-            - cmake-3.10
+            - cmake
 
 compiler:
-  - clang
   - gcc
+  - clang
 
 before_script:
     - sudo apt-get update -qq
