--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ addons:
       - gcc-7
       - g++-7
 
+before_script:
+    - sudo apt-get update -qq
+    - sudo apt-get install libboost-thread-dev libboost-system-dev
+
 script:
   - export CC=gcc-7
   - export CXX=g++-7
-  - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug ..
+  - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make
