Add directory for psych

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ message("Found boost thread library: ${Boost_THREAD_LIBRARY}")
 add_subdirectory(src/async)
 add_subdirectory(src/comms)
 add_subdirectory(src/core)
+add_subdirectory(src/psych)
