Add matching library (incomplete)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(src/async)
 add_subdirectory(src/comms)
 add_subdirectory(src/core)
 add_subdirectory(src/psych)
+add_subdirectory(src/matching)
