--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
 
 before_script:
     - sudo apt-get update -qq
-    - sudo apt-get install libboost-thread-dev libboost-system-dev
+    - sudo apt-get install libboost-thread-dev libboost-system-dev libprotobuf-dev protobuf-compiler
 
 script:
   - export CC=gcc-7
