--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ before_script:
 script:
   - export CC=gcc-7
   - export CXX=g++-7
-  - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make
+  - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make && make test
