--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
 - export CC=gcc-7
 - export CXX=g++-7
 - mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make && make test
-- sonar-scanner
+- cd .. && sonar-scanner
