Use build wrapper for sonarcloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,7 @@ before_script:
 script:
 - export CC=gcc-7
 - export CXX=g++-7
-- mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make && make test
+- mkdir Build && cd Build && cmake -DCMAKE_BUILD_TYPE=Debug ..
+- build-wrapper-linux-x86-64 --out-dir bw-output make
+- make test
 - cd .. && sonar-scanner
