--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,5 @@ sonar.projectKey=zephyrj:zephyrLib
 sonar.projectName=zephyrLib
 sonar.projectVersion=0.0.1
 sonar.sources=./src
+
+sonar.cfamily.build-wrapper-output=Build/bw-output
